# bdk-workshop-satsconf-2024

./: Cargo.toml  LICENSE  README.md
migrations/: 01_bdk_key.sql
src/: error.rs  key_store.rs  main.rs  template.rs
